Can you find the Easter egg?
Can you find the Easter egg?

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 				<p>Your Cities, Your Pix</p>
 			</div>
 		</header>
+			<video id="" loop>
+				<source autoplay src="images/Star Wars Episode VII.mp4" type="video/mp4">
+			</video>
 			<div class="container">
 				<form>
 						<select id="city-type">
